--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
@@ -43,6 +43,8 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-ble-plx": "^3.5.0",
+    "react-native-bluetooth-serial-next": "^1.2.3",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "^3.16.2",
     "react-native-safe-area-context": "^4.14.1",
@@ -51,7 +53,8 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "tailwindcss": "^3.4.17",
-    "tempo-devtools": "^2.0.95"
+    "tempo-devtools": "^2.0.95",
+    "expo-dev-client": "~5.0.14"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
